--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "gsap": "^3.12.5",
+    "tsparticles": "^3.7.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13"
   },
